// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes keyframes with interpolation 1`] = `
@keyframes animation-0 {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.emotion-0 {
  animation: animation-0 2s linear infinite;
}

<h1
  class="emotion-0"
>
  hello world
</h1>
`;

exports[`keyframes renders 1`] = `
@keyframes animation-0 {
  from, 20%, 53%, 80%, to {
    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
    transform: translate3d(0,0,0);
  }

  40%, 43% {
    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    transform: translate3d(0, -30px, 0);
  }

  70% {
    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    transform: translate3d(0, -15px, 0);
  }

  90% {
    transform: translate3d(0,-4px,0);
  }
}

.emotion-0 {
  animation: animation-0 2s linear infinite;
}

<h1
  class="emotion-0"
>
  hello world
</h1>
`;
